--- a/style.css
+++ b/style.css
@@ -168,9 +168,11 @@ img {
     position: absolute;
     right: 0;
     bottom: 0;
-    color: var(--clr-text);
-    font-size: calc(var(--fs-text) * 0.9);
-    mix-blend-mode: difference;
+    margin: 1rem;
+    color: hsl(0, 0%, 80%, 30%);
+    font-size: calc(var(--fs-text) * 0.6);
+
+    z-index: 2;
 }
 
 .preamble {
